--- a/soluciones11.ipynb
+++ b/soluciones11.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "source": [
     "# Tarea 11\n",
-    "## Christian Ayala"
+    "## Christian Ayala\n",
+    "## link del GitHub: https://github.com/kurereishu/Taller09/blob/main/soluciones11.ipynb"
    ]
   },
   {
